--- a/.github/workflows/LibCMaker_CI.yml
+++ b/.github/workflows/LibCMaker_CI.yml
@@ -56,181 +56,181 @@ jobs:
             runner: "ubuntu-18.04"
 
 
-# === macOS ===
+## === macOS ===
 
-# macOS, AppleClang, Xcode
-          - target: "macOS_Xcode"
-            platform: "x64"
-            compiler: "AppleClang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Xcode"
-            runner: "macos-10.15"
+## macOS, AppleClang, Xcode
+#          - target: "macOS_Xcode"
+#            platform: "x64"
+#            compiler: "AppleClang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Xcode"
+#            runner: "macos-10.15"
 
-          - target: "macOS_Xcode"
-            platform: "x64"
-            compiler: "AppleClang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Xcode"
-            runner: "macos-10.15"
+#          - target: "macOS_Xcode"
+#            platform: "x64"
+#            compiler: "AppleClang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Xcode"
+#            runner: "macos-10.15"
 
-# macOS, Clang, Unix Makefiles
-          - target: "macOS_Makefiles"
-            platform: "x64"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Unix Makefiles"
-            runner: "macos-10.15"
+## macOS, Clang, Unix Makefiles
+#          - target: "macOS_Makefiles"
+#            platform: "x64"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Unix Makefiles"
+#            runner: "macos-10.15"
 
-          - target: "macOS_Makefiles"
-            platform: "x64"
-            compiler: "Clang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Unix Makefiles"
-            runner: "macos-10.15"
+#          - target: "macOS_Makefiles"
+#            platform: "x64"
+#            compiler: "Clang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Unix Makefiles"
+#            runner: "macos-10.15"
 
-# macOS, GCC, Unix Makefiles
-          - target: "macOS_Makefiles"
-            platform: "x64"
-            compiler: "GCC"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Unix Makefiles"
-            runner: "macos-10.15"
+## macOS, GCC, Unix Makefiles
+#          - target: "macOS_Makefiles"
+#            platform: "x64"
+#            compiler: "GCC"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Unix Makefiles"
+#            runner: "macos-10.15"
 
-          - target: "macOS_Makefiles"
-            platform: "x64"
-            compiler: "GCC"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Unix Makefiles"
-            runner: "macos-10.15"
-
-
-# === Windows ===
-
-# Windows, MSVC, x64
-          - target: "Windows_MSVC"
-            platform: "x64"
-            compiler: "MSVC"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Visual Studio"
-            runner: "windows-2016"
-
-          - target: "Windows_MSVC"
-            platform: "x64"
-            compiler: "MSVC"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Visual Studio"
-            runner: "windows-2016"
-
-# Windows, MSVC, Win32
-          - target: "Windows_MSVC"
-            platform: "Win32"
-            compiler: "MSVC"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Visual Studio"
-            runner: "windows-2016"
-
-          - target: "Windows_MSVC"
-            platform: "Win32"
-            compiler: "MSVC"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Visual Studio"
-            runner: "windows-2016"
-
-# Windows, MSVC, WinXP
-          - target: "Windows_MSVC"
-            platform: "WinXP"
-            compiler: "MSVC"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Visual Studio"
-            runner: "windows-2016"
-
-          - target: "Windows_MSVC"
-            platform: "WinXP"
-            compiler: "MSVC"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Visual Studio"
-            runner: "windows-2016"
+#          - target: "macOS_Makefiles"
+#            platform: "x64"
+#            compiler: "GCC"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Unix Makefiles"
+#            runner: "macos-10.15"
 
 
-# Windows, GCC, MinGW-w64, x86_64
-          - target: "Windows_MinGW-w64"
-            platform: "x86_64"
-            compiler: "GCC"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "MinGW Makefiles"
-            runner: "windows-2016"
+## === Windows ===
 
-          - target: "Windows_MinGW-w64"
-            platform: "x86_64"
-            compiler: "GCC"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "MinGW Makefiles"
-            runner: "windows-2016"
+## Windows, MSVC, x64
+#          - target: "Windows_MSVC"
+#            platform: "x64"
+#            compiler: "MSVC"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Visual Studio"
+#            runner: "windows-2016"
 
-# Windows, GCC, MinGW-w64, i686
-          - target: "Windows_MinGW-w64"
-            platform: "i686"
-            compiler: "GCC"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "MinGW Makefiles"
-            runner: "windows-2016"
+#          - target: "Windows_MSVC"
+#            platform: "x64"
+#            compiler: "MSVC"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Visual Studio"
+#            runner: "windows-2016"
 
-          - target: "Windows_MinGW-w64"
-            platform: "i686"
-            compiler: "GCC"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "MinGW Makefiles"
-            runner: "windows-2016"
+## Windows, MSVC, Win32
+#          - target: "Windows_MSVC"
+#            platform: "Win32"
+#            compiler: "MSVC"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Visual Studio"
+#            runner: "windows-2016"
 
-# Windows, Clang, MinGW-w64, x86_64
-          - target: "Windows_MinGW-w64"
-            platform: "x86_64"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "MinGW Makefiles"
-            runner: "windows-2016"
+#          - target: "Windows_MSVC"
+#            platform: "Win32"
+#            compiler: "MSVC"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Visual Studio"
+#            runner: "windows-2016"
 
-          - target: "Windows_MinGW-w64"
-            platform: "x86_64"
-            compiler: "Clang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "MinGW Makefiles"
-            runner: "windows-2016"
+## Windows, MSVC, WinXP
+#          - target: "Windows_MSVC"
+#            platform: "WinXP"
+#            compiler: "MSVC"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Visual Studio"
+#            runner: "windows-2016"
 
-# Windows, Clang, MinGW-w64, i686
-          - target: "Windows_MinGW-w64"
-            platform: "i686"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "MinGW Makefiles"
-            runner: "windows-2016"
+#          - target: "Windows_MSVC"
+#            platform: "WinXP"
+#            compiler: "MSVC"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Visual Studio"
+#            runner: "windows-2016"
 
-          - target: "Windows_MinGW-w64"
-            platform: "i686"
-            compiler: "Clang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "MinGW Makefiles"
-            runner: "windows-2016"
+
+## Windows, GCC, MinGW-w64, x86_64
+#          - target: "Windows_MinGW-w64"
+#            platform: "x86_64"
+#            compiler: "GCC"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "MinGW Makefiles"
+#            runner: "windows-2016"
+
+#          - target: "Windows_MinGW-w64"
+#            platform: "x86_64"
+#            compiler: "GCC"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "MinGW Makefiles"
+#            runner: "windows-2016"
+
+## Windows, GCC, MinGW-w64, i686
+#          - target: "Windows_MinGW-w64"
+#            platform: "i686"
+#            compiler: "GCC"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "MinGW Makefiles"
+#            runner: "windows-2016"
+
+#          - target: "Windows_MinGW-w64"
+#            platform: "i686"
+#            compiler: "GCC"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "MinGW Makefiles"
+#            runner: "windows-2016"
+
+## Windows, Clang, MinGW-w64, x86_64
+#          - target: "Windows_MinGW-w64"
+#            platform: "x86_64"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "MinGW Makefiles"
+#            runner: "windows-2016"
+
+#          - target: "Windows_MinGW-w64"
+#            platform: "x86_64"
+#            compiler: "Clang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "MinGW Makefiles"
+#            runner: "windows-2016"
+
+## Windows, Clang, MinGW-w64, i686
+#          - target: "Windows_MinGW-w64"
+#            platform: "i686"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "MinGW Makefiles"
+#            runner: "windows-2016"
+
+#          - target: "Windows_MinGW-w64"
+#            platform: "i686"
+#            compiler: "Clang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "MinGW Makefiles"
+#            runner: "windows-2016"
 
 
 # === Android, on Linux ===
@@ -304,95 +304,95 @@ jobs:
             runner: "ubuntu-18.04"
 
 
-# === Android, on Windows ===
+## === Android, on Windows ===
 
-# Android, armeabi-v7a, on Windows
-          - target: "Android_Windows"
-            platform: "armeabi-v7a"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Ninja"
-            runner: "windows-2016"
+## Android, armeabi-v7a, on Windows
+#          - target: "Android_Windows"
+#            platform: "armeabi-v7a"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2016"
 
-          - target: "Android_Windows"
-            platform: "armeabi-v7a"
-            compiler: "Clang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Ninja"
-            runner: "windows-2016"
+#          - target: "Android_Windows"
+#            platform: "armeabi-v7a"
+#            compiler: "Clang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2016"
 
-# Android, arm64-v8a, on Windows
-          - target: "Android_Windows"
-            platform: "arm64-v8a"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Ninja"
-            runner: "windows-2016"
+## Android, arm64-v8a, on Windows
+#          - target: "Android_Windows"
+#            platform: "arm64-v8a"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2016"
 
-          - target: "Android_Windows"
-            platform: "arm64-v8a"
-            compiler: "Clang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Ninja"
-            runner: "windows-2016"
+#          - target: "Android_Windows"
+#            platform: "arm64-v8a"
+#            compiler: "Clang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2016"
 
-# Android, x86, on Windows
-          - target: "Android_Windows"
-            platform: "x86"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Ninja"
-            runner: "windows-2016"
+## Android, x86, on Windows
+#          - target: "Android_Windows"
+#            platform: "x86"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2016"
 
-          - target: "Android_Windows"
-            platform: "x86"
-            compiler: "Clang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Ninja"
-            runner: "windows-2016"
+#          - target: "Android_Windows"
+#            platform: "x86"
+#            compiler: "Clang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2016"
 
-# Android, x86_64, on Windows
-          - target: "Android_Windows"
-            platform: "x86_64"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Ninja"
-            runner: "windows-2016"
+## Android, x86_64, on Windows
+#          - target: "Android_Windows"
+#            platform: "x86_64"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2016"
 
-          - target: "Android_Windows"
-            platform: "x86_64"
-            compiler: "Clang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Ninja"
-            runner: "windows-2016"
+#          - target: "Android_Windows"
+#            platform: "x86_64"
+#            compiler: "Clang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2016"
 
 
-# === iOS ===
+## === iOS ===
 
-# iOS, Clang, SIMULATOR64
-          - target: "iOS"
-            platform: "SIMULATOR64"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Xcode"
-            runner: "macos-10.15"
+## iOS, Clang, SIMULATOR64
+#          - target: "iOS"
+#            platform: "SIMULATOR64"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Xcode"
+#            runner: "macos-10.15"
 
-          - target: "iOS"
-            platform: "SIMULATOR64"
-            compiler: "Clang"
-            build_type: "Release"
-            lib_linking: "static"
-            cmake_generator: "Xcode"
-            runner: "macos-10.15"
+#          - target: "iOS"
+#            platform: "SIMULATOR64"
+#            compiler: "Clang"
+#            build_type: "Release"
+#            lib_linking: "static"
+#            cmake_generator: "Xcode"
+#            runner: "macos-10.15"
 
 
     name: ${{join( matrix.*, ', ' )}}
