--- a/.github/workflows/LibCMaker_CI.yml
+++ b/.github/workflows/LibCMaker_CI.yml
@@ -56,24 +56,24 @@ jobs:
             runner: "ubuntu-18.04"
 
 
-## === macOS ===
+# === macOS ===
 
-## macOS, AppleClang, Xcode
-#          - target: "macOS_Xcode"
-#            platform: "x64"
-#            compiler: "AppleClang"
-#            build_type: "Debug"
-#            lib_linking: "shared"
-#            cmake_generator: "Xcode"
-#            runner: "macos-10.15"
+# macOS, AppleClang, Xcode
+          - target: "macOS_Xcode"
+            platform: "x64"
+            compiler: "AppleClang"
+            build_type: "Debug"
+            lib_linking: "shared"
+            cmake_generator: "Xcode"
+            runner: "macos-10.15"
 
-#          - target: "macOS_Xcode"
-#            platform: "x64"
-#            compiler: "AppleClang"
-#            build_type: "Release"
-#            lib_linking: "static"
-#            cmake_generator: "Xcode"
-#            runner: "macos-10.15"
+          - target: "macOS_Xcode"
+            platform: "x64"
+            compiler: "AppleClang"
+            build_type: "Release"
+            lib_linking: "static"
+            cmake_generator: "Xcode"
+            runner: "macos-10.15"
 
 ## macOS, Clang, Unix Makefiles
 #          - target: "macOS_Makefiles"
