--- a/.github/workflows/LibCMaker_CI.yml
+++ b/.github/workflows/LibCMaker_CI.yml
@@ -75,22 +75,22 @@ jobs:
             cmake_generator: "Xcode"
             runner: "macos-10.15"
 
-## macOS, Clang, Unix Makefiles
-#          - target: "macOS_Makefiles"
-#            platform: "x64"
-#            compiler: "Clang"
-#            build_type: "Debug"
-#            lib_linking: "shared"
-#            cmake_generator: "Unix Makefiles"
-#            runner: "macos-10.15"
+# macOS, Clang, Unix Makefiles
+          - target: "macOS_Makefiles"
+            platform: "x64"
+            compiler: "Clang"
+            build_type: "Debug"
+            lib_linking: "shared"
+            cmake_generator: "Unix Makefiles"
+            runner: "macos-10.15"
 
-#          - target: "macOS_Makefiles"
-#            platform: "x64"
-#            compiler: "Clang"
-#            build_type: "Release"
-#            lib_linking: "static"
-#            cmake_generator: "Unix Makefiles"
-#            runner: "macos-10.15"
+          - target: "macOS_Makefiles"
+            platform: "x64"
+            compiler: "Clang"
+            build_type: "Release"
+            lib_linking: "static"
+            cmake_generator: "Unix Makefiles"
+            runner: "macos-10.15"
 
 ## macOS, GCC, Unix Makefiles
 #          - target: "macOS_Makefiles"
