CI: Enable 'Android, x86_64, on Windows, Debug, shared'

--- a/.github/workflows/LibCMaker_CI.yml
+++ b/.github/workflows/LibCMaker_CI.yml
@@ -357,14 +357,14 @@ jobs:
 #            cmake_generator: "Ninja"
 #            runner: "windows-2019"
 
-## Android, x86_64, on Windows
-#          - target: "Android_Windows"
-#            platform: "x86_64"
-#            compiler: "Clang"
-#            build_type: "Debug"
-#            lib_linking: "shared"
-#            cmake_generator: "Ninja"
-#            runner: "windows-2019"
+# Android, x86_64, on Windows
+          - target: "Android_Windows"
+            platform: "x86_64"
+            compiler: "Clang"
+            build_type: "Debug"
+            lib_linking: "shared"
+            cmake_generator: "Ninja"
+            runner: "windows-2019"
 
           - target: "Android_Windows"
             platform: "x86_64"
@@ -380,7 +380,7 @@ jobs:
 ## iOS, Clang, SIMULATOR64
 #          - target: "iOS"
 #            platform: "SIMULATOR64"
-#            compiler: "Clang"
+#            compiler: "AppleClang"
 #            build_type: "Debug"
 #            lib_linking: "shared"
 #            cmake_generator: "Xcode"
@@ -388,7 +388,7 @@ jobs:
 
 #          - target: "iOS"
 #            platform: "SIMULATOR64"
-#            compiler: "Clang"
+#            compiler: "AppleClang"
 #            build_type: "Release"
 #            lib_linking: "static"
 #            cmake_generator: "Xcode"
