Disable 'Android, x86_64, on Windows, Debug, shared'

--- a/.github/workflows/LibCMaker_CI.yml
+++ b/.github/workflows/LibCMaker_CI.yml
@@ -357,14 +357,14 @@ jobs:
 #            cmake_generator: "Ninja"
 #            runner: "windows-2019"
 
-# Android, x86_64, on Windows
-          - target: "Android_Windows"
-            platform: "x86_64"
-            compiler: "Clang"
-            build_type: "Debug"
-            lib_linking: "shared"
-            cmake_generator: "Ninja"
-            runner: "windows-2019"
+## Android, x86_64, on Windows
+#          - target: "Android_Windows"
+#            platform: "x86_64"
+#            compiler: "Clang"
+#            build_type: "Debug"
+#            lib_linking: "shared"
+#            cmake_generator: "Ninja"
+#            runner: "windows-2019"
 
           - target: "Android_Windows"
             platform: "x86_64"
