--- a/.github/workflows/LibCMaker_CI.yml
+++ b/.github/workflows/LibCMaker_CI.yml
@@ -304,7 +304,7 @@ jobs:
             runner: "ubuntu-18.04"
 
 
-## === Android, on Windows ===
+# === Android, on Windows ===
 
 ## Android, armeabi-v7a, on Windows
 #          - target: "Android_Windows"
